--- a/app/src/ui/screens/NewMemoScreen/NewMemoScreen.css
+++ b/app/src/ui/screens/NewMemoScreen/NewMemoScreen.css
@@ -1,11 +1,23 @@
 .new-memo-screen {
     @apply container mx-auto max-w-[80rem] h-full w-full tablet:p-4 relative;
 
+
     .text-editor-toolbar {
         @apply tablet:top-4;
     }
 
+    .memo {
+        @apply p-0!;
+    }
+
     .memo .editor {
-        min-height: 100dvh;
+        min-height: 100svh;
+        padding-top: max(env(safe-area-inset-top, 0), calc(var(--spacing) * 2));
+        padding-bottom: max(env(safe-area-inset-bottom, 0), calc(var(--spacing) * 4));
+
+        .text-editor {
+            padding-left: max(env(safe-area-inset-left, 0), calc(var(--spacing) * 4));
+            padding-right: max(env(safe-area-inset-right, 0), calc(var(--spacing) * 4));
+        }
     }
 }
